--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -82,7 +82,7 @@
         <div class="menu">
           <div>
             <ul>
-              <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='hit')}">히트상품3333</a></li>
+              <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='hit')}">히트상품</a></li>
               <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='recommend')}">추천상품</a></li>
               <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='latest')}">최신상품</a></li>
               <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='hot')}">인기상품</a></li>
