--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <footer th:fragment="footer">
     <ul>
-        <li><a href="#">회사소개</a></li>
+        <li><a th:href="@{/company/index}">회사소개</a></li>
         <li><a th:href="@{/policy/buyer}">서비스이용약관</a></li>
         <li><a th:href="@{/policy/privacy}">개인정보처리방침</a></li>
         <li><a th:href="@{/policy/finance}">전자금융거래약관</a></li>
