--- a/src/main/resources/templates/policy/buyer.html
+++ b/src/main/resources/templates/policy/buyer.html
@@ -6,7 +6,7 @@
   <nav>
     <h1>LotteON 서비스 이용약관</h1>
     <ul>
-      <li class="on"><a th:href="@{/buyer}">구매회원 약관</a></li>
+      <li class="on"><a th:href="@{/policy/buyer}">구매회원 약관</a></li>
       <li><a th:href="@{/policy/seller}">판매회원 약관</a></li>
       <li><a th:href="@{/policy/finance}">전자금융거래 약관</a></li>
       <li><a th:href="@{/policy/location}">위치정보이용 약관</a></li>
