--- a/src/main/resources/templates/admin/product/register.html
+++ b/src/main/resources/templates/admin/product/register.html
@@ -222,30 +222,7 @@
                                 <tr>
                                     <td>2차 분류</td>
                                     <td>
-                                        <select name="prodCate2" id="category2">
-                                            <!--<option value="00">2차 분류 선택</option>
-                                            <option value="10">남성의류</option>
-                                            <option value="11">여성의류</option>
-                                            <option value="12">잡화</option>
-                                            <option value="13">뷰티</option>
-                                            <option value="10">노트북/PC</option>
-                                            <option value="11">가전</option>
-                                            <option value="12">휴대폰</option>
-                                            <option value="13">기타</option>
-                                            <option value="10">신선식품</option>
-                                            <option value="11">가공식품</option>
-                                            <option value="12">건강식품</option>
-                                            <option value="13">생필품</option>
-                                            <option value="14">커피•음료</option>
-                                            <option value="10">가구/DIY</option>
-                                            <option value="11">침구•커튼</option>
-                                            <option value="12">생활용품</option>
-                                            <option value="13">사무용품</option>
-                                            <option value="10">국내도서</option>
-                                            <option value="11">해외도서</option>
-                                            <option value="12">학습/교육</option>
-                                            <option value="13">음반</option>-->
-                                        </select>
+                                        <select name="prodCate2" id="category2"></select>
                                     </td>
                                 </tr>
                             </table>
@@ -294,15 +271,6 @@
                                 <tr>
                                     <td>재고수량</td>
                                     <td><input type="text" name="stock"/>개</td>
-                                </tr>
-                                <tr>
-                                    <td>판매상태</td>
-                                    <td>
-                                        <select type="text" name="sale">
-                                            <option value="1">판매 중</option>
-                                            <option value="0">판매중지</option>
-                                        </select>
-                                    </td>
                                 </tr>
                                 <tr>
                                     <td>배송비</td>
