--- a/src/main/resources/templates/product/order.html
+++ b/src/main/resources/templates/product/order.html
@@ -9,12 +9,11 @@
         var article = {
             prodNo: /*[[${item.prodNo}]]*/,
             count: /*[[${item.count}]]*/,
-            total: /*[[${item.total}]]*/
+            total: /*[[${item.totalPrice}]]*/
         };
         articleArray.push(article);
         /*[/]*/
 </script>
-
     <script th:src="@{/js/product/product_order.js}"></script>
     <script th:src="@{/js/product/product_order_zipcode.js}"></script>
 </head>
