--- a/src/main/resources/templates/fragments/product/product_layout.html
+++ b/src/main/resources/templates/fragments/product/product_layout.html
@@ -18,10 +18,8 @@
         <link rel="stylesheet" th:href="@{/css/common.css}"/>
         <link rel="stylesheet" th:href="@{/css/product.css}"/>
         <style>
-
-
-
         </style>
+        <script th:src="@{/js/index.js}"></script>
     </head>
 <body>
 <div id="wrapper">
@@ -33,12 +31,11 @@
         <div class="logo">
             <div>
                 <a th:href="@{/}"><img th:src="@{/images/header_logo.png}" alt="로고" /></a>
-                <form action="#">
+                <form th:action="@{/product/search}" method="get">
                     <input type="text" name="keyword"/>
                     <button><i class="fa fa-search"></i></button>
                 </form>
             </div>
-
         </div>
         <div class="menu">
             <div>
@@ -50,11 +47,11 @@
                     <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='discount')}" th:class="${pageRequestDTO.type eq 'discount' ? 'on' : 'off'}">할인상품</a></li>
                 </ul>
                 <ul>
-                    <li><a href="#">쿠폰존</a></li>
-                    <li><a href="#">사용후기</a></li>
-                    <li><a href="#">개인결제</a></li>
-                    <li><a href="#">고객센터</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a th:href="@{/my/coupon}">쿠폰존</a></li>
+                    <li><a th:href="@{/my/review}">사용후기</a></li>
+                    <li><a th:href="@{/my/order}">개인결제</a></li>
+                    <li><a th:href="@{/cs}">고객센터</a></li>
+                    <li><a th:href="@{/cs/faq/list}">FAQ</a></li>
                 </ul>
             </div>
         </div>
