--- a/src/main/resources/templates/fragments/admin/admin_aside.html
+++ b/src/main/resources/templates/fragments/admin/admin_aside.html
@@ -23,7 +23,7 @@
                     <ol>
                         <li><a th:href="@{/admin/index}">회원현황</a></li>
                         <li><a th:href="@{/admin/index}">포인트관리</a></li>
-                        <li><a th:href="@{/admin/member}">비회원관리</a></li>
+                        <li><a th:href="@{/admin/index}">비회원관리</a></li>
                         <li><a th:href="@{/admin/index}">접속자집계</a></li>
                     </ol>
                 </li>
