--- a/src/main/resources/static/css/my.css
+++ b/src/main/resources/static/css/my.css
@@ -1218,6 +1218,27 @@ footer p > strong {
 }
 
 /* my - info(나의설정) */
+#my > .info > section > .modifyPass {
+    padding: 30px;
+    box-sizing: border-box;
+}
+#my > .info > section > .modifyPass > h3 {
+    margin-left: 79px;
+}
+#my > .info > section > .modifyPass > h3:nth-child(3) {
+    display: none;
+    margin-top: 50px;
+}
+#my > .info > section > .modifyPass > .passTable {
+    width: 80%;
+    margin: 10px auto;
+}
+#my > .info > section > .modifyPass > .passTable:nth-of-type(2) {
+    display: none;
+}
+#my > .info > section > .modifyPass > #btnInfoChange {
+    display: none;
+}
 #my > .info > section > article > table {
     width: 100%;
     height: auto;
@@ -1225,10 +1246,10 @@ footer p > strong {
     margin-top: 6px;
     border-collapse: collapse;            
 }
+
 #my > .info > section > article > table * {
     font-family: '돋움';
 }
-
 #my > .info > section > article > table th {
     padding: 6px;
     background-color: #a5a7a5;
@@ -1281,6 +1302,19 @@ footer p > strong {
     background: #e74929;
     border: 1px solid #c84f3c;
     color: #fff;
+    cursor: pointer;
+}
+
+#my #InfoPass {
+    display: block;
+    width: 80px;
+    padding: 2px;
+    border: 1px solid #999;
+    background-color: #e9e9e9;
+    text-align: center;
+}
+#my #InfoPass:hover {
+    background-color: #e9e9e9;
     cursor: pointer;
 }
 
